Update profile and project images; refine project description for clarity

--- a/templates/blog/portfolio/page_updated_skills.html.twig
+++ b/templates/blog/portfolio/page_updated_skills.html.twig
@@ -597,10 +597,10 @@
                     <div class="carousel-item active">
                         <div class="project-container">
                             <div class="card project-card">
-                                <img src="https://source.unsplash.com/random/800x600?technology" class="card-img-top" alt="Project Image">
+                                <img src="{{ asset('images/home/featured_project.png') }}" class="card-img-top" alt="Project Image">
                                 <div class="card-body">
                                     <h5 class="card-title">Dashboard de Monitoring Réseau</h5>
-                                    <p class="card-text">Application web de monitoring réseau en temps réel utilisant Django, Celery, et Plotly.</p>
+                                    <p class="card-text">Application python de monitoring réseau avec TTinker & Pyplot.</p>
                                     <a href="#" class="btn btn-primary">Voir le projet</a>
                                 </div>
                             </div>
@@ -628,7 +628,7 @@
                                         </button>
                                     </h2>
                                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionProject1">
-                                        <div classbody">
+                                        <div classbody>
                                             <p>Configuration des équipements réseau pour la collecte de données.</p>
                                             <div class="btn-group">
                                                 <a href="#" class="btn btn-primary btn-sm">Ouvrir justificatif</a>
