--- a/templates/blog/portfolio/home.html.twig
+++ b/templates/blog/portfolio/home.html.twig
@@ -52,7 +52,7 @@
     <div class="glass-card mb-5">
         <div class="row align-items-center">
             <div class="col-md-4 text-center">
-                <img src="/placeholder.svg?height=200&width=200" alt="Photo de profil" class="profile-image mb-3">
+                <img src=" {{ asset('images/home/profile_header.jpg') }} " alt="Photo de profil" class="profile-image mb-3">
             </div>
             <div class="col-md-8">
                 <h1 class="display-4 mb-4">Bienvenue sur Mon E-Portfolio</h1>
